--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,18 +1,22 @@
 ---
 import site from "../data/site";
+import SEO from "simple-astro-seo";
 
 export interface Props {
-  title?: string
-  descrption?: string;
+  title?: string;
+  description?: string;
   image?: string;
   canonicalURL?: string;
 }
 const {
-  descrption = site.description,
+  description = site.description,
   image = site.image,
   canonicalURL = new URL(Astro.request.url, Astro.site),
 } = Astro.props;
-const title = Astro.props.title ? [site.title, Astro.props.title].join(' | ') : 'Astro | Make webs more fasters' 
+const title = Astro.props.title
+  ? [site.title, Astro.props.title].join(" | ")
+  : "Astro | Make webs more fasters";
+const ensureTrailingSlash = (url: string) => url.replace(/\/$/, "") + "/";
 ---
 
 <meta charset="UTF-8" />
@@ -20,3 +24,9 @@ const title = Astro.props.title ? [site.title, Astro.props.title].join(' | ') : 
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 <title>{title}</title>
+<SEO
+  {title}
+  {description}
+  url={ensureTrailingSlash(canonicalURL.toString())}
+  twitterHandler={site.twitterHandler}
+/>
