--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,35 +1,25 @@
 ---
-export interface Props {
-	title: string;
+import type { Props as PropsBaseHead } from "../components/BaseHead.astro";
+import BaseHead from "../components/BaseHead.astro";
+import Footer from '../components/Footer.astro'
+import Header from '../components/Header.astro'
+export interface Props extends PropsBaseHead {
+  hero?: boolean;
 }
 
-const { title } = Astro.props;
+const { hero, ...head } = Astro.props
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <BaseHead {...head} />
+  </head>
+  <body>
+    <Header />
+    <main class="min-h-screen overflow-x-hidden">
+      <slot />
+    </main>
+      <Footer />
+  </body>
 </html>
-<style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
-</style>
