--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Button from '../components/Button.astro'
 ---
 <Layout title='home'>
   <h1>WElcome astro</h1>
+  <Button>Boton primary</Button>
 </Layout>
