--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,14 @@
 ---
 import type { Props as PropsBaseHead } from "../components/BaseHead.astro";
 import BaseHead from "../components/BaseHead.astro";
-import Footer from '../components/Footer.astro'
-import Header from '../components/Header.astro'
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+import { Sprite } from "astro-icon";
 export interface Props extends PropsBaseHead {
   hero?: boolean;
 }
 
-const { hero, ...head } = Astro.props
+const { hero, ...head } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -16,10 +17,12 @@ const { hero, ...head } = Astro.props
     <BaseHead {...head} />
   </head>
   <body>
-    <Header />
-    <main class="min-h-screen overflow-x-hidden">
-      <slot />
-    </main>
+    <Sprite.Provider>
+      <Header />
+      <main class="min-h-screen overflow-x-hidden">
+        <slot />
+      </main>
       <Footer />
+    </Sprite.Provider>
   </body>
 </html>
