--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from "../layouts/Layout.astro";
 import Button from '../components/Button.astro'
 ---
 <Layout title='home'>
+  <div class="mt-24">
   <h1>WElcome astro</h1>
   <Button>Boton primary</Button>
+  </div>
 </Layout>
